update css & html

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,12 @@ p{
     margin-bottom: 24px;
 }
 .joinnow{
-    max-width: 204px;
+    display: inline-block;
+    text-align: center;
+    width: 204px;
+    font-size: 18px;
+    font-weight: 500;
+    border: 8px solid #5C3BAE;
     border-radius: 8px;
     background: #5C3BAE;
     padding: 16px 24px;
@@ -74,4 +79,23 @@ p{
 }
 .group{
     align-items: center;
+}
+.watch-video {
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.play-icon {
+    margin-left: 24px;
+    width: 32px; 
+    height: 32px; 
+    vertical-align: middle;
+}
+
+.watch {
+    text-decoration: underline;
+    color: #4D3491;
+    font-size: 16px;
+    vertical-align: middle;
+    margin-left: 12px;
 }
